fixing some warnings.